--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+      <!--navbar-->
         <nav class="navbaaar">
             <div class="logo"> 
                 <h4>Samira<span>Portfolio</span></h4>
